CRUD com scaffolding

--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-a3429480-efa5-457c-b280-518d2c6d73b7;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
