MySQL first migration

--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-a3429480-efa5-457c-b280-518d2c6d73b7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "Server=localhost;userid=root;password=fernando;database=saleswebmvc",
+    //"SalesWebMVCContext": "Server=localhost;userid=root;password=fernando;database=saleswebmvcappdb"
   }
 }
